add widget config file

--- a/app/src/main/res/xml/example_app_widget_info.xml
+++ b/app/src/main/res/xml/example_app_widget_info.xml
@@ -5,6 +5,7 @@
     android:minWidth="110dp"
     android:minResizeWidth="40dp"
     android:resizeMode="horizontal|horizontal"
-    android:updatePeriodMillis="3600000">
+    android:updatePeriodMillis="3600000"
+    android:configure="com.example.widgettutorial.ExampleWidgetConfigFile">
 
 </appwidget-provider>
